# MeEither_Project

./: README.md
MeEither_Client/: CMakeLists.txt  ChatCiient.ui  ChatClient.cpp  ChatClient.h  ChatRoomList.cpp  ChatRoomList.h  ChatRoomList.ui  ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  ChooseLand.cpp  ChooseLand.h  ChooseLand.ui  ClientProfile.cpp  ClientProfile.h  ClientProfile.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  SignUpWindow.cpp  SignUpWindow.h  SignUpWindow.ui  main.cpp
MeEither_Server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  ChatServer.ui  DatabaseManager.cpp  DatabaseManager.h  main.cpp
